// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Bottom sheet Snapshots tests should match snapshot 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div />
  <div
    alfa-portal-container=""
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        style="opacity: 1; transition: opacity 500ms ease-in-out; position: relative; z-index: 100;"
      >
        <div
          aria-hidden="true"
          class="backdrop disabledPointerEvents appear appearActive"
        />
      </div>
      <div
        class="wrapper"
        role="dialog"
        style="z-index: 100;"
        tabindex="-1"
      >
        <div
          class="component modal appear appearActive"
        >
          <div
            class="content hasHeader"
          >
            <div
              class="wrapper"
            >
              <div
                class="component"
                style="height: unset; max-height: 744px;"
              >
                <div
                  class="marker defaultMarker"
                />
                <div
                  class="scrollableContainer"
                >
                  <div
                    class="header headerWrapper hasContent"
                  >
                    <div
                      class="mainLine"
                    >
                      <div
                        class="content title left trim"
                        style="visibility: visible;"
                      >
                        <div
                          class="title"
                        >
                          Bottom sheet title
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="content noFooter"
                  >
                    <div>
                      Bottom sheet content
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Bottom sheet Snapshots tests should match snapshot with action button 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    alfa-portal-container=""
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        style="opacity: 1; transition: opacity 500ms ease-in-out; position: relative; z-index: 100;"
      >
        <div
          aria-hidden="true"
          class="backdrop disabledPointerEvents appear appearActive"
        />
      </div>
      <div
        class="wrapper"
        role="dialog"
        style="z-index: 100;"
        tabindex="-1"
      >
        <div
          class="component modal appear appearActive"
        >
          <div
            class="content hasFooter hasHeader"
          >
            <div
              class="wrapper"
            >
              <div
                class="component"
                style="height: unset; max-height: 744px;"
              >
                <div
                  class="marker defaultMarker"
                />
                <div
                  class="scrollableContainer"
                >
                  <div
                    class="header headerWrapper hasContent"
                  >
                    <div
                      class="mainLine"
                    >
                      <div
                        class="content title left trim"
                        style="visibility: visible;"
                      >
                        <div
                          class="title"
                        >
                          Bottom sheet title
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="content"
                  >
                    <div>
                      Bottom sheet content
                    </div>
                  </div>
                  <div
                    class="footer sticky"
                  >
                    <div />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
  <div />
</body>
`;
